--- a/TODO.txt
+++ b/TODO.txt
@@ -23,9 +23,7 @@ Write bonds analyze
 
 Expand write module
 	[**  ] {----} add lmpdat basic functionality
-	[*   ] {----} writing using array of frames (not only single frame)
-	[**  ] {----} rethink frame/frames returning/accepting policy
-	[*   ] {----} writing dummy types
+	[**  ] {00--} writing using array of frames (not only single frame)
 
 Improve create module
 	[*   ] {----} write sensible documentation
@@ -33,6 +31,3 @@ Improve create module
 	[**  ] {----} add and test molecule com
 	[*   ] {----} finish Crystal class
 
-
-RMS --- FIX BUGS
-	[**  ] {----} fix grid bugs
